# pulse

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
packaging/aur/pulse-tui/: .SRCINFO  PKGBUILD
packaging/aur/pulse-tui-git/: PKGBUILD
pkg/aur/: .SRCINFO  PKGBUILD
snap/: snapcraft.yaml
src/: app.rs  config.rs  event.rs  history.rs  main.rs  plugin.rs  remote.rs  server.rs  system.rs  theme.rs  ui.rs  utils.rs
src/system/: container.rs  cpu.rs  disk.rs  fan.rs  gpu.rs  memory.rs  mod.rs  network.rs  process.rs
src/ui/: animation.rs  crt.rs  layout.rs  mod.rs  panels.rs  theme.rs
