[package]
name = "pulse"
version = "0.1.0"
edition = "2021"
description = "A high-performance terminal system monitor with cyberpunk aesthetics"
license = "MIT"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
sysinfo = "0.32"
tokio = { version = "1", features = ["full"] }
color-eyre = "0.6"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
