[package]
name = "pulse"
version = "0.2.0"
edition = "2021"
description = "A production-grade terminal system monitor with an animated cyberpunk TUI"
license = "MIT"
authors = ["Pulse Contributors"]
readme = "README.md"
repository = "https://github.com/OminduD/pulse"
keywords = ["system-monitor", "tui", "terminal", "linux", "performance"]
categories = ["command-line-utilities", "visualization"]
# Optional but powerful for crates.io ranking
rust-version = "1.75"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"

# System data
sysinfo = "0.32"
nix = { version = "0.29", features = ["signal", "process"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
color-eyre = "0.6"

# Config & serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

# Utilities
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
libloading = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1
